fix: small CSS error that wasn't visible on another resolution

--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,7 @@ button{
     padding:8% 8%;
     align-items: center;
     color:#F9FAF8;
+    justify-content: center;
 }
 .bluebox{
     width:1200px;
